--- a/fancy_menus/package.json
+++ b/fancy_menus/package.json
@@ -39,6 +39,9 @@
     "promise": "7.1.1",
     "react-dev-utils": "^0.2.1",
     "recursive-readdir": "2.1.0",
+    "reducers": "^3.0.0-alpha",
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
