--- a/food_api/Gemfile
+++ b/food_api/Gemfile
@@ -16,6 +16,7 @@ gem 'figaro'
 gem 'pry'
 gem 'bcrypt', '~> 3.1.7'
 gem 'jwt'
+gem 'active_model_serializers'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
